fix(persistence): resolve linting issues and reduce cognitive complexity in persistence logic